padmin1/base/drone-api-test-1/service.yaml
---
apiVersion: apps/v1
kind: Service
metadata:
  creationTimestamp: null
  name: drone-api-test-1
spec: {}
status:
  loadBalancer: {}
