padmin1/base/drone-api-test-1/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  name: drone-api-test-1
spec: {}
status:
  loadBalancer: {}
